@@ -1,5 +1,6 @@
 ParamHelpers_1.7:
 - dfRowsToList, dfRowToList: added arg enforce.col.types
+- UntypedParam also got the "tunable" flag
 
 ParamHelpers_1.6:
 - added new character parameter types, see new functions below
